@@ -2,7 +2,6 @@ package com.perundhu.infrastructure.persistence.adapter;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
@@ -27,24 +26,50 @@ public class LocationJpaRepositoryAdapter implements LocationRepository {
     }
     
     @Override
+    public Optional<Location> findById(Long id) {
+        return jpaRepository.findById(id)
+                .map(LocationJpaEntity::toDomainModel);
+    }
+    
+    @Override
     public List<Location> findAll() {
         return jpaRepository.findAll().stream()
                 .map(LocationJpaEntity::toDomainModel)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     @Override
     public List<Location> findAllExcept(Location.LocationId id) {
         return jpaRepository.findByIdNot(id.getValue()).stream()
                 .map(LocationJpaEntity::toDomainModel)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     @Override
     public List<Location> findByName(String name) {
         return jpaRepository.findByName(name).stream()
                 .map(LocationJpaEntity::toDomainModel)
-                .collect(Collectors.toList());
+                .toList();
+    }
+    
+    @Override
+    public Optional<Location> findByExactName(String name) {
+        return jpaRepository.findByNameEquals(name)
+                .map(LocationJpaEntity::toDomainModel);
+    }
+    
+    @Override
+    public Optional<Location> findNearbyLocation(Double latitude, Double longitude, double radiusDegrees) {
+        // This would typically involve a spatial query
+        // For now, returning empty as this may require a separate implementation
+        return Optional.empty();
+    }
+    
+    @Override
+    public List<Location> findCommonConnections(Long fromLocationId, Long toLocationId) {
+        return jpaRepository.findCommonConnections(fromLocationId, toLocationId).stream()
+                .map(LocationJpaEntity::toDomainModel)
+                .toList();
     }
     
     @Override
@@ -58,3 +83,4 @@ public class LocationJpaRepositoryAdapter implements LocationRepository {
         jpaRepository.deleteById(id.getValue());
     }
 }
+
